<resources>
    <string name="app_name">SecNote</string>
    <string name="general_email">Email</string>
    <string name="general_password">Password</string>
    <string name="general_signIn">Sign In</string>
    <string name="general_signUp">Sign Up</string>
    <string name="general_signOut">Sign Out</string>
    <string name="general_email_error">Enter email to continue.</string>
    <string name="general_password_error">Enter password to continue.</string>
    <string name="general_profile">Profile</string>
    <string name="general_lock">Lock</string>
    <string name="general_delete">Delete</string>
    <string name="general_share">Share</string>
    <string name="general_encryption">Encryption</string>
    <string name="general_all_notes">All notes</string>
    <string name="general_add_first_note">Add your first note</string>
    <string name="general_no_keys">No keys found</string>
    <string name="general_title">Title</string>
    <string name="general_body">Body</string>
    <string name="general_note">Note</string>
    <string name="general_add_category">Add Category</string>
    <string name="general_categories">Categories</string>
    <string name="general_category_name">Category name</string>
    <string name="general_note_saved">Note has been successfully saved</string>
    <string name="general_error_occurred">Error occurred</string>
    <string name="general_error_delete_new_note_title">Note not created yet.</string>
    <string name="general_error_delete_new_note">Can`t delete note that don`t exist yet.</string>
    <string name="general_try_again_later">Please try again later.</string>
    <string name="general_lock_screen_title">Please authorize device to continue.</string>
    <string name="general_lock_screen_subtitle">By authentication you unlocking cryptographic material which is used for safety of your data</string>
    <string name="general_set_pin">Set PIN</string>
    <string name="general_set_pin_info">To use application set up phone PIN</string>
    <string name="general_authorize_device">Authorize</string>
    <string name="general_authorize_expired">Authorization expired please reauthorize device</string>
    <string name="general_aes128">AES128</string>
    <string name="general_aes192">AES192</string>
    <string name="general_aes256">AES256</string>
    <string name="general_alias">Alias</string>
    <string name="general_add_key">Add key</string>
    <string name="general_note_key_not_found_title">Key for decryption not found</string>
    <string name="general_note_key_not_found_body">If you changed your phone screen lock mechanism all your keys are invalidated therefore note can`t be decrypted. Note will be deleted. </string>
    <string name="general_ok">OK</string>
    <string name="general_error_unknown">Error occurred, please try again later.</string>
    <string name="general_error_connection">Check your internet connection and try again.</string>
    <string name="general_error_invalid_credentials">Check your login credentials and try again.</string>
    <string name="general_error_user_not_found">User with provided email not found.</string>
    <string name="general_error_unauthenticated">Login time expired. Renew your login.</string>
    <string name="general_error_unauthenticated_body">You were inactive more than 7 days since the last login, please sign in once again to get access to your account.</string>
    <string name="general_unsafe_changes">Unsaved changes</string>
    <string name="general_unsafe_changes_info">You made changes and didn\'t save them. Do you want to discard these changes?</string>
    <string name="general_discard">Discard</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_encryption_tutorial">Encryption keys are used to secure your notes, so only you and you only on your device can access content in your notes. In case of loss of device or uninstalling, the application keys are permanently lost, and so are notes encrypted with them.</string>
    <string name="general_encryption_removed">Encryption from note removed</string>
    <string name="general_encryption_added">Note encrypted with key: %s</string>
    <string name="general_decryption_tutorial">Encrypted notes are automatically decrypted when the note is opened. Decryption is tied to the user authorization window, which lasts for 5 minutes from the last successful unlock of application.</string>
    <string name="general_no_categories">No categories found</string>
</resources>
