<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.login.LoginFragment">

    <data>

        <variable
            name="view"
            type="app.vut.secnote.ui.main.login.LoginView"/>

        <variable
            name="viewModel"
            type="app.vut.secnote.ui.main.login.LoginViewModel"/>

        <variable
            name="viewState"
            type="app.vut.secnote.ui.main.login.LoginViewState"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d8"
            android:text="@string/app_name"
            android:textAppearance="@style/TextBold.White.64"
            app:layout_constraintBottom_toTopOf="@id/login_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d8"
            android:layout_marginTop="@dimen/d8"
            android:layout_marginEnd="@dimen/d8"
            android:hint="@string/general_email"
            app:errorText="@{viewState.emailError}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewState.email}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d8"
            android:layout_marginTop="@dimen/d2"
            android:layout_marginEnd="@dimen/d8"
            android:hint="@string/general_password"
            app:errorText="@{viewState.passwordError}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewState.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d8"
            android:layout_marginTop="@dimen/d8"
            android:layout_marginEnd="@dimen/d8"
            android:onClick="@{() -> viewModel.signIn()}"
            android:text="@string/general_signIn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d8"
            android:layout_marginTop="@dimen/d2"
            android:layout_marginEnd="@dimen/d8"
            android:onClick="@{() -> viewModel.signUp()}"
            android:text="@string/general_signUp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_signin"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/d16"
            android:src="@drawable/ic_undraw_unlock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_signup"
            app:layout_constraintVertical_bias="0"
            tools:ignore="ContentDescription"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>