<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.profile.ProfileFragment">

    <data>

        <variable
            name="view"
            type="app.vut.secnote.ui.main.profile.ProfileView"/>

        <variable
            name="viewModel"
            type="app.vut.secnote.ui.main.profile.ProfileViewModel"/>

        <variable
            name="viewState"
            type="app.vut.secnote.ui.main.profile.ProfileViewState"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:navigation_icon_click="@{() -> viewModel.navigateBack()}"
            app:title="@string/general_profile"
            app:titleTextColor="@color/white"/>

        <TextView
            android:id="@+id/profile_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d8"
            android:layout_marginEnd="@dimen/d8"
            android:textAppearance="@style/TextRegular.LightGrey.12"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/profile_avatar"
            app:layout_constraintTop_toBottomOf="@id/profile_avatar"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/general_email"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/d8"
            android:paddingEnd="@dimen/d8"
            android:textAppearance="@style/TextRegular.White.16"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_email_label"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@{viewState.email}"
            tools:text="john.doetest@gmail.com"/>

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/d8"
            tools:ignore="ContentDescription"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_sign_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d8"
            android:onClick="@{() -> viewModel.signOut()}"
            android:text="@string/general_signOut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>